<resources>
    <string name="app_name">AristoCat</string>
    <string name="maximus_name">MAXIMUS</string>
    <string name="maximus_nick">THE ACCLAIMED HERO</string>
    <string name="maximus_moto">THERE IS NO SUCH THING AS PAIN, ONLY VICTORY.</string>
    <string name="maximus_abstract">He puts the \'A\' in Aristeia! The epitome and defender of the grand values that define this sport, a natural-born leader, protector of his companions, and scourge of his opponents, Maximus\' resplendent smile and shield-bearing silhouette fan the flames of passion in the hearts of sports fans across the Human Sphere.\n</string>
    <string name="maximus_description">Maximus is the square-jawed hero every kid in the Human Sphere wants to grow up to become. Maximus is the \‘A\’ in Aristeia!\n
        Most Aristeia! fighters build a persona around their unique abilities and equipment, a bigger-than-life canvas on which to project a compelling story. By dint of editing and various audio-visual technologies, they forge their legend as superheroes or fearsome heels in the eyes of billions.\n
        Maximus is no exception to this, but he also serves a political function. He lives out a message PanOceania is constantly broadcasting to Humankind at large, playing the role that the hyperpower claims to play for the Human Sphere. He\’s the shield of Justice that makes order possible, the armor that safeguards the standard of living every society is entitled to. Maximus is the perfect stand-in and spokesman for his nation: Courteous and unfailingly wholesome, yet still a titanic, unassailable bulwark.\n
        In the HexaDome, as in his many feature mayafilms, Maximus plays the lead. He offsets the limitations of his bulk with masterful positioning, and can serve his tactical roles—zone defense, man-to-man lockdown, teammate coverage—robustly despite his lack of serious firepower.\n
        Maximus is the epitome of fair play and teamwork. He\’s been at the peak of the competition for a whooping eight years and is showing no signs of slowing down.\n
        \“Say your prayers and eat your vitamins!\”</string>
    <string name="parvati_name">PARVATI</string>
    <string name="parvati_nick">MADE FOR THE HEXADOME</string>
    <string name="parvati_moto">TACTICAL ANALYSIS COMPLETE. CONFIDENCE OF VICTORY AT 97.83\%.</string>
    <string name="parvati_abstract">She\'s indefatigably, maximally devoted to her team. If there is a limit to her capacity for self-improvement, we have yet to see a sign of it. She will heal, repair, assess, fight, and even score if necessary. Parvati performs all her roles so dependably that she\'s been a staple of the Interplanetary Aristeia! Team Managers Association\'s All-Star team for twenty years straight, and still going strong.\n</string>
    <string name="parvati_description">Parvati is a permanent memento for the early days of Aristeia!, when only synthetic bodies were allowed to fight.\n
        It’s been twenty-five years since the first Aristeia! cast. Back then, it was called Yajurveda, and was conceived as gladiatorial combat between Aspects of ALEPH—among them, our beloved Parvati—wearing otherworldly synth bods. The show had been running for four years when its first ever human contender rose to the top. The audience fell in love with her fierceness and physicality, so much so that the channel was emboldened to pivot towards meat-on-meat fighting and slowly phase the machines out.\n
        Today, only Parvati remains as a vestige of those first runs, her claim to fame unchallenged. Parvati’s learning module was programmed by ALEPH with a focus on teamwork and field medicine, and with successive iterations she has become a veritable staple of the game. Naturally, Parvati is supremely effective at patching her teammates up in a rush, but what garnered her a spot among the all-time Bahadurs is her ability to do that while still scoring and taking out the competition. She’s known to be a second wind that can carry even the most disastrous game to victory.\n
        Each year, Parvati has regaled us with a specially-designed casing to suit that season’s overarching theme. Last season’s HexaDomes recreated the untamed mountains of Ariadna and Parvati flaunted the look of a rugged frontierswoman. This time she’s chosen retro stylings to take us back to her debut, updating that classic design but reminding her fans that deep down she’s a highly sophisticated android.\n
        After so many years in the spotlight, Parvati is a bona fide international celebrity, recognized for her work both inside the HexaDome and outside. With her learning module always collating and processing every game and every fight, only one question remains:\n
        Is there a ceiling to Parvati’s evolution?\</string>
    <string name="lunah_name">MAJOR LUNAH</string>
    <string name="lunah_nick">DISCIPLINED AND LETHAL</string>
    <string name="lunah_moto">YOU CAN RUN, BUT YOU CAN\'T HIDE.</string>
    <string name="lunah_abstract">As deliberate and lethal as the venomous snakes of her home planet, Major Lunah surrenders the spotlight only up until the moment she decides to make the kill. Her military rank is more than a marketing scheme; she has served her nation in some of the deadliest theatres of operation in the Human Sphere. Now, she\´s come to bring some much-needed discipline to the world of show biz.\n</string>
    <string name="lunah_description">This decorated markswoman—she holds the rank of Rā\'id in the Haqqislamite armed forces —entered the pro Aristeia! circuit only two years ago, and she’s already caused quite a splash.\n
        The forty-three-year-old war hero boasts an impressive service record, including not one, not two, but three tours as an elite sharpshooter on Paradiso, where she helped keep the alien invaders of the Combined Army at bay, lest they gain a foothold in their encroachment of the Human Sphere.\n
        For reasons she refuses to disclose, two years ago Major Lunah resigned her military commission and became an Aristeia! aspirant. She had the approval and support of her superiors at the Haqqislamite army and, as it turned out, of the Haqqislamite people at large—audience ratings in Haqqislam have skyrocketed since her debut.\n
        Major Lunah has introduced bona fide military discipline into the world of Aristeia! And, in a sport where warfare is so ostentatiously invoked, it seems the audience has gotten a taste for the real thing. Luckily for them, Major Lunah has a competitive streak, as evidenced by her celebration of every new notch on her gun. She has proven that a sniper can play as crucial a role in a team as any other combatant. Despite her stern rictus and martial demeanor, there’s cheers every time she comes out of nowhere and turns the tide of a game with a surgical max-range shot. And each time she pulls off one of her trademark ricochets, her merchandise flies off the shelf for weeks.\n
        Accurate, serene, courteous in her dealings with journalists and fans, she’s a real pro. Major Lunah has promised us a finale twist that sports aficionados won’t soon forget.\n
        Could the hour of revelation be nigh?\</string>
    <string name="hexx3r_name">HEXX3R</string>
    <string name="hexx3r_nick"> THE NOMAD WITCH</string>
    <string name="hexx3r_moto">EXITUS ACTA PROBAT</string>
    <string name="hexx3r_abstract">The \'Nomad Witch\' has worked hard for that moniker. Whenever she\'s in the arena, everyone else is at risk of becoming an unwitting pawn or a mindless puppet. With a pull of her string, a foe flies off the scoring zone like a broken doll; with a curt order, a friend advances an agenda only hEXx3r truly understands.\n</string>
    <string name="hexx3r_description">The enigmatic Nomad hacker known only as hEXx3r is responsible for a revolution in the role played by software in Aristeia!\n
        More than any other hacker in the brief stretch that the discipline has been applied to Aristeia! hEXx3r has changed the face of the game forever. In record time, she has proven capable of turning the tide of a match by sending her opponents into disarray at the worst possible moment. Armed with nothing but software, hEXx3r gives the heavyweights a run for their money. She freezes them, exposes them and then throws them into ambuscades choreographed at the speed of thought. The words “that Nomad witch” are often muttered by players as they’re carted out of the HexaDome.\n
        Her fans blame her strained reputation on ‘smear campaigns’ by PanOceanian media, but the truth is she has slipped comfortably into the role of a termagant and used it to boost her mystique. So far, it’s served her well. Her brand recognition numbers are outstanding and she’s a well-loved figure among non-conformists and antiestablishmentarians even beyond the borders of the Nomad Nation.\n
        hEXx3r hails from the Nomad mothership Tunguska, and her… unusual hacking device reflects that. Although its inner workings are a closely guarded secret, experts believe hEXx3r’s mask is part of a neural interface and that her gloves play a key role in giving her software access to the HexaDome fixtures, but beyond that it’s all conjecture.\n
        In the absence of official data, theories abound: from esoteric alien technology to the idea that hEXx3r herself was grown in a vat in some Praxis lab researching human telekinetic capabilities. But if you ask the average fan, they’ll have a simpler explanation:\n
        It’s legit witchcraft!\”</string>
    <string name="ball_name">8-BALL</string>
    <string name="ball_nick">THE CHARMING BLACK SHEEP</string>
    <string name="ball_moto">YOU KNOW ME; I SEE AN OPENING, I GOTTA PLAY BALL.</string>
    <string name="ball_abstract">Showmanship made (panda) flesh, a poet in the medium of randomness, \'Baller\' crashes the HexaDome like he crashes a party: unavoidably and unpredictably. He rolls like a powerful opening break, only this ball is calling all the shots. 8-Ball is the pain in any team manager\'s ass and the life of every party worthy of that name.\n</string>
    <string name="ball_description">He’s the eighth heir to a caste of Aristeia! champions, a beloved media superstar and an outrageous sex-symbol, but he’s always fallen just a little short of snatching the coveted title of Bahadur.\n
        8-Ball hails from Bakunin, the weirdest of the three motherships of the Nomad Nation. If the Bakunin society has one salient trait, it’s a tolerance for all things different and eccentric. A specific borough inside Bakunin, called VaudeVille, is the Human Sphere’s most fertile soil for artistic endeavor, sordid indulgence and extravagant lavishness. One discipline lies at the intersection of all three: body modification. For the right money, you can get panther eyes, live wire hair… or panda fur.\n
        No dark arts are responsible for 8-Ball’s prodigious size and strength; he was always going to be buff and deceptively agile for his massive size. Cheeky, impudent and carefree, at least he has the skills to back up all his bravado. As for his family, from a very early age they enabled his addiction to extreme sports in lieu of training for his rightful destiny: the crown of Aristeia! Bahadur.\n
        Will this be the season 8-Ball finally realizes his legacy?\n</string>
    <string name="mushashi_name">MIYAMOTO MUSHASHI</string>
    <string name="mushashi_nick">THE EDGE UNREMITTING</string>
    <string name="mushashi_moto">KNOW YOUR ENEMY; KNOW THEIR BLADE.</string>
    <string name="mushashi_abstract">If you were to synthesize pure combat prowess, the formula would have to contain the mind of the most renowned fighter in history, plus the most advanced artificial body ever designed. Luckily for us, Aristeia! has already gone to the trouble of manufacturing this volatile concoction, and all that\'s left for us is to kick back and enjoy the spectacle that is Miyamoto Mushashi.\n</string>
</resources>