<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backrepeat">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/lunah_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/lunah_background" />

        <ImageView
            android:id="@+id/lunah_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/lunah_logo" />

        <TextView
            android:id="@+id/lunah_motd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lunah_logo"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="0dp"
            android:shadowColor="@color/black_shadow"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1.5"
            android:singleLine="false"
            android:text="@string/lunah_moto"
            android:textAlignment="center"
            android:textColor="@color/white_font"
            android:textSize="12dp"
            android:alpha="0.95"
            app:fontFamily="@font/montalban_bold_italic" />

        <TextView
            android:id="@+id/lunah_abstract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lunah_motd"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="0dp"
            android:text="@string/lunah_abstract"
            android:textColor="@color/white_font"
            android:textSize="10dp"
            android:textAppearance="@android:style/TextAppearance.Holo.Small" />

        <TextView
            android:id="@+id/lunah_hl_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lunah_abstract"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:shadowColor="@color/black_shadow"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1.5"
            android:singleLine="false"
            android:text="BACKGROUND"
            android:textColor="@color/white_font"
            android:textSize="14dp"
            android:alpha="0.95"
            app:fontFamily="@font/montalban_bold_italic" />

        <TextView
            android:id="@+id/lunah_hl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lunah_hl_background"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="0dp"
            android:shadowColor="@color/black_shadow"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1.5"
            android:singleLine="false"
            android:text="@string/lunah_name"
            android:textStyle="bold"
            android:textColor="@color/white_font"
            android:textSize="14dp"
            android:textAppearance="@android:style/TextAppearance.Holo.Small" />

        <TextView
            android:id="@+id/lunah_hl_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/lunah_hl_name"
            android:layout_toRightOf="@+id/lunah_hl_name"
            android:layout_below="@+id/lunah_hl_background"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="0dp"
            android:shadowColor="@color/black_shadow"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1.5"
            android:singleLine="false"
            android:text="@string/lunah_nick"
            android:textStyle="normal"
            android:textColor="@color/white_font"
            android:textSize="12dp"
            android:textAppearance="@android:style/TextAppearance.Holo.Small" />

        <ImageView
            android:id="@+id/lunah_image"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_below="@+id/lunah_hl_name"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/lunah_image" />

        <TextView
            android:id="@+id/lunah_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lunah_hl_name"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="0dp"
            android:layout_toRightOf="@id/lunah_image"
            android:text="@string/lunah_description"
            android:textAppearance="@android:style/TextAppearance.Holo.Small"
            android:textColor="@color/white_font"
            android:textSize="8dp" />

        <TextView
            android:id="@+id/lunah_hl_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lunah_image"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="0dp"
            android:shadowColor="@color/black_shadow"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1.5"
            android:singleLine="false"
            android:text="CARDS"
            android:textColor="@color/white_font"
            android:textSize="14dp"
            android:alpha="0.95"
            app:fontFamily="@font/montalban_bold_italic" />

        <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/lunah_hl_cards"
            android:layout_marginTop="8dp">


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <ImageView
                    android:id="@+id/lunah_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/lunah_profile" />

                <ImageView
                    android:id="@+id/lunah_card1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/lunah_card1" />

                <ImageView
                    android:id="@+id/lunah_card2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/lunah_card2" />

                <ImageView
                    android:id="@+id/lunah_card3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/lunah_card3" />

                <ImageView
                    android:id="@+id/lunah_card4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:cropToPadding="false"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/lunah_card4" />

            </LinearLayout>

        </HorizontalScrollView>

    </RelativeLayout>

</ScrollView>